# pisa25-wkfl-tm-management

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
code/: arrange_tmx_files.groovy  arrange_tmx_files.js  arrange_tmx_files.py  arrange_tmx_files_v2.js  arrange_tmx_files_with_extension.js  arrange_tmx_files_with_extension.py  arrange_tmx_files_with_penalty.js  arrange_tmx_files_with_penalty.py  arrange_tmx_files_with_penalty_v2.js  locales.js  prune_tmx_content.groovy  prune_tmx_files.js  prune_tmx_files.py  trim_domain.py
diff/: arrange_tmx_files_with_extension_0b43202.py  arrange_tmx_files_with_extension_408cb26.py
docs/: arrange_tmx_files_with_extension.html  index.html  search.js
tests/: testing-node.sh  testing.sh
